# Discord-IG-Feed

./: .gitignore  Cargo.toml  Dockerfile  angular.json  package-lock.json  package.json
server/: Cargo.toml  tauri.conf.json
server/src/: commands.rs  main.rs  models.rs
src/: commands.rs  events.rs  ig_feeder.rs  index.html  main.rs  models.rs  proxy.rs  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  commands.rs  events.rs  igapi.rs  main.rs  models.rs  proxy.rs
src/app/: app.component.html  app.component.ts
