[package]
name = "james_cage_white"
version = "0.1.0"
edition = "2018"
authors = ["joshua laviolette", "jacob powers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.60"
serenity = { version = "0.11.7", features = ["framework", "standard_framework", "rustls_backend", "collector", "client", "gateway", "rustls_backend", "model", "chrono"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
