[package]
name = "james_cage_white"
version = "0.1.0"
edition = "2018"
authors = ["joshua laviolette", "jacob powers", "isaac klein"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
reqwest = { version = "0.11.22" }
serde_json = "1.0.108"
serenity = { version = "0.11.7", features = ["framework", "standard_framework", "rustls_backend", "collector", "client", "gateway", "rustls_backend", "model", "chrono"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31" }
select = "0.6.0"
rand = "0.8.5"
tauri = "1.5.4"
