[package]
name = "discord_ig_feed"
version = "0.2.0"
description = "A Discord bot server that feeds a selected Instagram user's posts"
authors = ["joshua laviolette", "jacob powers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
reqwest = { version = "0.11.22" }
serenity = { version = "0.11.7", features = [
    "framework",
    "standard_framework",
    "rustls_backend",
    "collector",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.31" }
select = "0.6.0"
rand = "0.8.5"
lazy_static = "1.4.0"
base64 = "0.21.7"
serde_bytes = "0.11.14"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
